# ccbrainfck

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: bfcompiler.hpp  bfvm.hpp  bytecode.hpp  ccbf.hpp
src/: bfcompiler.cpp  ccbf.cpp  compiler.cpp  main.cpp
test/: bfvm_tests.cpp  compiler_tests.cpp  tests.cpp
